# flutter_mediapipe

./: .gitignore  pubspec.yaml
.dart_tool/: package_config.json
dart_api_test/.dart_tool/: package_config.json
flutter_pose_landmark_project/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
flutter_pose_landmark_project/.dart_tool/: package_config.json  package_config_subset
flutter_pose_landmark_project/.dart_tool/flutter_build/: dart_plugin_registrant.dart
flutter_pose_landmark_project/.dart_tool/flutter_build/1267a3ff96a8f8805e381258aed2524d/: .filecache  debug_android_application.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  native_assets.d  native_assets.stamp  outputs.json
flutter_pose_landmark_project/android/: build.gradle  settings.gradle
flutter_pose_landmark_project/android/app/: CMakeLists.txt  build.gradle
flutter_pose_landmark_project/android/app/libs/: arm64-v8a  armeabi-v7a
flutter_pose_landmark_project/android/gradle/wrapper/: gradle-wrapper.properties
flutter_pose_landmark_project/assets/data/: ModelStructureLog.txt
flutter_pose_landmark_project/lib/: detection_page.dart  detection_page_back.dart  draw_layer.dart  livecamera.dart  main.dart  main_back2.dart  main_back3.dart
flutter_pose_landmark_project/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
